--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="user_id">Name: </string>
+    <string name="date"> </string>
+    <string name="systolic_label">Systolic Reading</string>
+    <string name="diastolic_label">Diastolic Reading</string>
+    <string name="check_button">Check</string>
 </resources>
