Changed App Name Refactor Removed apk

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Parekh_Bolinao</string>
+    <string name="app_name">Heart Health Gauge</string>
     <string name="title_home">Home</string>
     <string name="title_recent">Recent</string>
     <string name="title_summaries">Summaries</string>
